Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/UWorld.h

	DOTNET_EXPORT auto E_PROP_UWorld_AudioTimeSeconds_GET(UWorld* Ptr) { return Ptr->AudioTimeSeconds; }
	DOTNET_EXPORT void E_PROP_UWorld_AudioTimeSeconds_SET(UWorld* Ptr, float Value) { Ptr->AudioTimeSeconds = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bCreateRenderStateForHiddenComponents_GET(UWorld* Ptr) { return Ptr->bCreateRenderStateForHiddenComponents; }
	DOTNET_EXPORT void E_PROP_UWorld_bCreateRenderStateForHiddenComponents_SET(UWorld* Ptr, bool Value) { Ptr->bCreateRenderStateForHiddenComponents = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bDebugDrawAllTraceTags_GET(UWorld* Ptr) { return Ptr->bDebugDrawAllTraceTags; }
	DOTNET_EXPORT void E_PROP_UWorld_bDebugDrawAllTraceTags_SET(UWorld* Ptr, bool Value) { Ptr->bDebugDrawAllTraceTags = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bDoDelayedUpdateCullDistanceVolumes_GET(UWorld* Ptr) { return Ptr->bDoDelayedUpdateCullDistanceVolumes; }
	DOTNET_EXPORT void E_PROP_UWorld_bDoDelayedUpdateCullDistanceVolumes_SET(UWorld* Ptr, bool Value) { Ptr->bDoDelayedUpdateCullDistanceVolumes = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bHack_Force_UsesGameHiddenFlags_True_GET(UWorld* Ptr) { return Ptr->bHack_Force_UsesGameHiddenFlags_True; }
	DOTNET_EXPORT void E_PROP_UWorld_bHack_Force_UsesGameHiddenFlags_True_SET(UWorld* Ptr, bool Value) { Ptr->bHack_Force_UsesGameHiddenFlags_True = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bInTick_GET(UWorld* Ptr) { return Ptr->bInTick; }
	DOTNET_EXPORT void E_PROP_UWorld_bInTick_SET(UWorld* Ptr, bool Value) { Ptr->bInTick = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bIsBuilt_GET(UWorld* Ptr) { return Ptr->bIsBuilt; }
	DOTNET_EXPORT void E_PROP_UWorld_bIsBuilt_SET(UWorld* Ptr, bool Value) { Ptr->bIsBuilt = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bIsLevelStreamingFrozen_GET(UWorld* Ptr) { return Ptr->bIsLevelStreamingFrozen; }
	DOTNET_EXPORT void E_PROP_UWorld_bIsLevelStreamingFrozen_SET(UWorld* Ptr, bool Value) { Ptr->bIsLevelStreamingFrozen = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bIsRunningConstructionScript_GET(UWorld* Ptr) { return Ptr->bIsRunningConstructionScript; }
	DOTNET_EXPORT void E_PROP_UWorld_bIsRunningConstructionScript_SET(UWorld* Ptr, bool Value) { Ptr->bIsRunningConstructionScript = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bIsWorldInitialized_GET(UWorld* Ptr) { return Ptr->bIsWorldInitialized; }
	DOTNET_EXPORT void E_PROP_UWorld_bIsWorldInitialized_SET(UWorld* Ptr, bool Value) { Ptr->bIsWorldInitialized = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bPostTickComponentUpdate_GET(UWorld* Ptr) { return Ptr->bPostTickComponentUpdate; }
	DOTNET_EXPORT void E_PROP_UWorld_bPostTickComponentUpdate_SET(UWorld* Ptr, bool Value) { Ptr->bPostTickComponentUpdate = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bShouldForceUnloadStreamingLevels_GET(UWorld* Ptr) { return Ptr->bShouldForceUnloadStreamingLevels; }
	DOTNET_EXPORT void E_PROP_UWorld_bShouldForceUnloadStreamingLevels_SET(UWorld* Ptr, bool Value) { Ptr->bShouldForceUnloadStreamingLevels = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bShouldForceVisibleStreamingLevels_GET(UWorld* Ptr) { return Ptr->bShouldForceVisibleStreamingLevels; }
	DOTNET_EXPORT void E_PROP_UWorld_bShouldForceVisibleStreamingLevels_SET(UWorld* Ptr, bool Value) { Ptr->bShouldForceVisibleStreamingLevels = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bShouldSimulatePhysics_GET(UWorld* Ptr) { return Ptr->bShouldSimulatePhysics; }
	DOTNET_EXPORT void E_PROP_UWorld_bShouldSimulatePhysics_SET(UWorld* Ptr, bool Value) { Ptr->bShouldSimulatePhysics = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bTickNewlySpawned_GET(UWorld* Ptr) { return Ptr->bTickNewlySpawned; }
	DOTNET_EXPORT void E_PROP_UWorld_bTickNewlySpawned_SET(UWorld* Ptr, bool Value) { Ptr->bTickNewlySpawned = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_CommittedPersistentLevelName_GET(UWorld* Ptr) { return ConvertToManage_StringWrapper(Ptr->CommittedPersistentLevelName); }
	DOTNET_EXPORT void E_PROP_UWorld_CommittedPersistentLevelName_SET(UWorld* Ptr, char* Value) { Ptr->CommittedPersistentLevelName = ConvertFromManage_FName(Value); }
	
	DOTNET_EXPORT auto E_PROP_UWorld_DebugDrawTraceTag_GET(UWorld* Ptr) { return ConvertToManage_StringWrapper(Ptr->DebugDrawTraceTag); }
	DOTNET_EXPORT void E_PROP_UWorld_DebugDrawTraceTag_SET(UWorld* Ptr, char* Value) { Ptr->DebugDrawTraceTag = ConvertFromManage_FName(Value); }
	
	DOTNET_EXPORT auto E_PROP_UWorld_DeltaTimeSeconds_GET(UWorld* Ptr) { return Ptr->DeltaTimeSeconds; }
	DOTNET_EXPORT void E_PROP_UWorld_DeltaTimeSeconds_SET(UWorld* Ptr, float Value) { Ptr->DeltaTimeSeconds = Value; }
	DOTNET_EXPORT auto E_UWorld_GetWorld(UWorld* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetWorld());
	}
	DOTNET_EXPORT auto E_UWorld_IsAsset(UWorld* Self)
	{
		return Self->IsAsset();
	}
	DOTNET_EXPORT auto E_UWorld_IsEditorOnly(UWorld* Self)
	{
		return Self->IsEditorOnly();
	}
	DOTNET_EXPORT auto E_UWorld_IsFullNameStableForNetworking(UWorld* Self)
	{
		return Self->IsFullNameStableForNetworking();
	}
	DOTNET_EXPORT auto E_UWorld_IsLocalizedResource(UWorld* Self)
	{
		return Self->IsLocalizedResource();
	}
	DOTNET_EXPORT auto E_UWorld_IsNameStableForNetworking(UWorld* Self)
	{
		return Self->IsNameStableForNetworking();
	}
	DOTNET_EXPORT auto E_UWorld_IsPostLoadThreadSafe(UWorld* Self)
	{
		return Self->IsPostLoadThreadSafe();
	}
	DOTNET_EXPORT auto E_UWorld_IsReadyForFinishDestroy(UWorld* Self)
	{
		return Self->IsReadyForFinishDestroy();
	}
	DOTNET_EXPORT auto E_UWorld_IsSafeForRootSet(UWorld* Self)
	{
		return Self->IsSafeForRootSet();
	}
	DOTNET_EXPORT auto E_UWorld_IsSupportedForNetworking(UWorld* Self)
	{
		return Self->IsSupportedForNetworking();
	}
	DOTNET_EXPORT auto E_UWorld_MarkAsEditorOnlySubobject(UWorld* Self)
	{
		Self->MarkAsEditorOnlySubobject();
	}
	DOTNET_EXPORT auto E_UWorld_Modify(UWorld* Self, bool bAlwaysMarkDirty)
	{
		auto _p0 = bAlwaysMarkDirty;
		return Self->Modify(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_NeedsLoadForClient(UWorld* Self)
	{
		return Self->NeedsLoadForClient();
	}
	DOTNET_EXPORT auto E_UWorld_NeedsLoadForEditorGame(UWorld* Self)
	{
		return Self->NeedsLoadForEditorGame();
	}
	DOTNET_EXPORT auto E_UWorld_NeedsLoadForServer(UWorld* Self)
	{
		return Self->NeedsLoadForServer();
	}
	DOTNET_EXPORT auto E_UWorld_NotifyObjectReferenceEliminated(UWorld* Self)
	{
		Self->NotifyObjectReferenceEliminated();
	}
	DOTNET_EXPORT auto E_UWorld_PostCDOContruct(UWorld* Self)
	{
		Self->PostCDOContruct();
	}
	DOTNET_EXPORT auto E_UWorld_PostEditImport(UWorld* Self)
	{
		Self->PostEditImport();
	}
	DOTNET_EXPORT auto E_UWorld_PostInitProperties(UWorld* Self)
	{
		Self->PostInitProperties();
	}
	DOTNET_EXPORT auto E_UWorld_PostLoad(UWorld* Self)
	{
		Self->PostLoad();
	}
	DOTNET_EXPORT auto E_UWorld_PostNetReceive(UWorld* Self)
	{
		Self->PostNetReceive();
	}
	DOTNET_EXPORT auto E_UWorld_PostRename(UWorld* Self, UObject* OldOuter, char* OldName)
	{
		auto _p0 = OldOuter;
		auto _p1 = ConvertFromManage_FName(OldName);
		Self->PostRename(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UWorld_PostRepNotifies(UWorld* Self)
	{
		Self->PostRepNotifies();
	}
	DOTNET_EXPORT auto E_UWorld_PostSaveRoot(UWorld* Self, bool bCleanupIsRequired)
	{
		auto _p0 = bCleanupIsRequired;
		Self->PostSaveRoot(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_PreDestroyFromReplication(UWorld* Self)
	{
		Self->PreDestroyFromReplication();
	}
	DOTNET_EXPORT auto E_UWorld_PreNetReceive(UWorld* Self)
	{
		Self->PreNetReceive();
	}
	DOTNET_EXPORT auto E_UWorld_ShutdownAfterError(UWorld* Self)
	{
		Self->ShutdownAfterError();
	}
	DOTNET_EXPORT auto E_UWorld_AddToCluster(UWorld* Self, UObjectBaseUtility* ClusterRootOrObjectFromCluster, bool bAddAsMutableObject)
	{
		auto _p0 = ClusterRootOrObjectFromCluster;
		auto _p1 = bAddAsMutableObject;
		Self->AddToCluster(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UWorld_CanBeClusterRoot(UWorld* Self)
	{
		return Self->CanBeClusterRoot();
	}
	DOTNET_EXPORT auto E_UWorld_CanBeInCluster(UWorld* Self)
	{
		return Self->CanBeInCluster();
	}
	DOTNET_EXPORT auto E_UWorld_CreateCluster(UWorld* Self)
	{
		Self->CreateCluster();
	}
	DOTNET_EXPORT auto E_UWorld_OnClusterMarkedAsPendingKill(UWorld* Self)
	{
		Self->OnClusterMarkedAsPendingKill();
	}